# celeste.rs

./: .gitignore  Cargo.toml  azure-pipelines.yml
.github/workflows/: rust.yml
bridge/: Cargo.toml
bridge/src/: main.rs
celeste/: Cargo.toml  README.md
celeste/examples/: dump_dialog.rs  dump_frames.rs  dump_map.rs  roundtrip.rs  roundtrip_dialog.rs  say_hi.rs  split_frames.rs
celeste/fuzz/: Cargo.toml
celeste/fuzz/fuzz_targets/: binel.rs  ghostnet.rs
celeste/src/: error.rs  lib.rs
celeste/src/binel/: mod.rs  parser.rs  writer.rs
celeste/src/dialog/: dialog.pest  mod.rs  parser.rs  writer.rs
celeste/src/ghostnet/: mod.rs
celeste/tests/: change_package.rs  roundtrip_dialog_url.rs
celeste_derive/: .swp  Cargo.toml
celeste_derive/src/: data_struct.rs  lib.rs  newtype.rs
celeste_derive/tests/: tests.rs
docs/: CNAME  _config.yml  index.md
docs/assets/css/: style.scss
examples/: dump_dialog.rs  dump_map.rs  roundtrip.rs  roundtrip_dialog.rs
ghastly/: Cargo.toml
ghastly/src/: main.rs
src/: error.rs  lib.rs
src/binel/: mod.rs  parser.rs  serialize.rs  writer.rs
src/dialog/: mod.rs  parser.rs  writer.rs
src/maps/: mod.rs
templates/: tests.yml
tests/: change_package.rs  roundtrip_dialog_url.rs
