[package]
name = "celeste"
version = "0.1.1"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Crate for formats from the 2018 game Celeste."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/leo60228/celesters"
repository = "https://github.com/leo60228/celesters"

[dependencies]
nom = "^4.1"
nom-varint = "0.1.0"
unsigned-varint = "0.2.2"
lazy_static = "1.2.0"
log = "0.4.0"
byteorder = "1.3.1"
itertools = "0.8.0"

[dev-dependencies]
env_logger = { version = "0.6.0", default-features = false }
