[package]
name = "celeste"
version = "3.0.0-alpha.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Crate for formats from the 2018 game Celeste."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/leo60228/celesters"
repository = "https://github.com/leo60228/celesters"

[features]
default = ["derive"]
derive = ["celeste_derive"]

[dependencies]
nom = "5.0.0"
nom-varint = "0.2.0"
unsigned-varint = "0.2.2"
lazy_static = "1.3.0"
log = "0.4.8"
byteorder = "1.3.2"
itertools = "0.8.0"
snafu = "0.4.4"
derive_more = "0.15.0"
shrinkwraprs = "0.2.1"

[dependencies.celeste_derive]
version = "2.0.0-alpha.0"
path = "celeste_derive"
optional = true

[dev-dependencies]
env_logger = { version = "0.6.2", default-features = false }
