[package]
name = "bridge"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
async-std = "1.5.0"
futures = "0.3.4"
slice-deque = "0.3.0"
nom = "5.1.1"
smallvec = "1.3.0"
futures-intrusive = "0.3.0"
serenity = "0.8.1"

[dependencies.futures01]
package = "futures"
version = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.celeste]
path = "../celeste"
