[package]
name = "celeste"
version = "3.0.0-alpha.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Crate for formats from the 2018 game Celeste."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/leo60228/celesters"
repository = "https://github.com/leo60228/celesters"

[features]
default = [ "derive" ]
derive = [ "celeste_derive" ]

[dependencies]
nom = "5.0.0"
nom-varint = "0.2.1"
unsigned-varint = "0.3.0"
lazy_static = "1.3.0"
log = "0.4.8"
byteorder = "1.3.2"
itertools = "0.8.0"
derive_more = "0.99.0"
hashbrown = "0.6.0"
smallvec = "1.0.0"
futures = "0.3.0"
shrinkwraprs = "0.3.0"
derive-into-owned = "0.1.0"
snafu = "0.6.0"
indexmap = "1.3.0"

[dependencies.celeste_derive]
version = "2.0.0-alpha.0"
path = "../celeste_derive"
optional = true

[dev-dependencies]
env_logger = { version = "0.7.0", default-features = false }
async-std = "1.0.1"
attohttpc = { version = "0.9.0", default-features = false }

[[example]]
name = "roundtrip"
required-features = [ "std" ]

[[example]]
name = "dump_map"
required-features = [ "derive" ]

[[example]]
name = "dump_dialog"

[[test]]
name = "change_package"
required-features = [ "std" ]

[[test]]
name = "roundtrip_dialog_url"
