[package]
name = "celeste"
version = "3.0.0-alpha.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Crate for formats from the 2018 game Celeste."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/leo60228/celeste.rs"
repository = "https://github.com/leo60228/celeste.rs"

[features]
default = [ "derive" ]
derive = [ "celeste_derive" ]

[dependencies]
nom = "5.1.2"
nom-varint = "0.3.1"
unsigned-varint = "0.5.1"
byteorder = "1.3.4"
itertools = "0.9.0"
derive_more = "0.99.11"
hashbrown = "0.9.1"
smallvec = "1.5.1"
futures = "0.3.6"
shrinkwraprs = "0.3.0"
derive-into-owned = "0.1.0"
snafu = "0.6.9"
indexmap = "1.6.0"
pest = "2.1.3"
pest_derive = "2.1.0"

[dependencies.celeste_derive]
version = "2.0.0-alpha.0"
path = "../celeste_derive"
optional = true

[dev-dependencies]
async-std = "1.5.0"
attohttpc = "0.15.0"

[[example]]
name = "roundtrip"
required-features = [ "std" ]

[[example]]
name = "dump_map"
required-features = [ "derive" ]

[[example]]
name = "dump_dialog"

[[test]]
name = "change_package"
required-features = [ "std" ]

[[test]]
name = "roundtrip_dialog_url"
